# vole-zk-conversions

./: README.md
diet-mac-and-cheese/: Cargo.toml
diet-mac-and-cheese/benches/: cheddaprg.rs
diet-mac-and-cheese/examples/: bench.rs
diet-mac-and-cheese/src/: README.md  backend_multifield.rs  benchmark_tools.rs  cheddabits.rs  cheddaconv.rs  cheddaprg.rs  conv.rs  edabits.rs  hd_quicksilver.rs  homcom.rs  lib.rs  trunc.rs
ocelot/src/svole/: wykw.rs
ocelot/src/svole/wykw/: svole.rs
scripts/: analyze_conv.py  analyze_fpm.py  asker.sh  run_conv.sh  run_fpm.sh  tc.sh
scuttlebutt/src/: channel.rs  field.rs
scuttlebutt/src/field/: convolve.rs  f128b.rs  f2.rs  f61p.rs  f64b.rs  polynomial.rs  prime_field_using_ff.rs  small_binary_fields.rs
